--- a/src/pages/coaching.astro
+++ b/src/pages/coaching.astro
@@ -61,8 +61,8 @@ const videoTestimonials = [
 >
   <section class="relative bg-gradient-to-br from-[#3d4463] via-[#343A5A] to-[#2d3350] overflow-hidden min-h-screen lg:h-screen">
     <div class="w-full px-4 sm:px-8 md:px-12 lg:px-16 max-w-[1920px] mx-auto h-full flex items-center py-12 lg:py-0">
-      <div class="grid lg:grid-cols-2 gap-8 lg:gap-12 items-center w-full">
-        <div class="text-white lg:py-16 max-w-[650px] order-1 text-center lg:text-left mx-auto lg:mx-0">
+      <div class="grid lg:grid-cols-2 gap-8 lg:gap-12 items-center w-full relative">
+        <div class="text-white lg:py-16 max-w-[650px] order-1 text-center lg:text-left mx-auto lg:mx-0 z-10">
           <h1 class="font-bold mb-4 sm:mb-6 text-white text-3xl sm:text-4xl md:text-5xl" style="line-height: 1.2; font-family: 'Montserrat', sans-serif; font-weight: 700;">
             Want to scale your company?
           </h1>
@@ -90,16 +90,26 @@ const videoTestimonials = [
             </Button>
           </div>
         </div>
-        <div class="relative order-2 flex justify-center lg:absolute lg:right-0 lg:bottom-0 lg:w-[45%] lg:justify-end" style="height: 40vh; lg:height: 85vh;">
+        <div class="order-2 flex justify-center lg:hidden" style="height: 40vh;">
           <img
             src="/images/people/helm-ceo-josh-klenoff-headhot-qjknnjcxfmg5scwrifh6biwf8tb74yddazgypmqpz4.webp"
             alt="Josh Klenoff - Helm CEO"
-            class="w-auto h-full max-w-full object-contain object-bottom"
+            class="w-auto h-full object-contain object-bottom"
             width="600"
             height="800"
             loading="eager"
           />
         </div>
+      </div>
+      <div class="hidden lg:block absolute right-0 bottom-0" style="width: 55%; height: 100%;">
+        <img
+          src="/images/people/helm-ceo-josh-klenoff-headhot-qjknnjcxfmg5scwrifh6biwf8tb74yddazgypmqpz4.webp"
+          alt="Josh Klenoff - Helm CEO"
+          class="w-full h-full object-cover object-bottom"
+          width="600"
+          height="800"
+          loading="eager"
+        />
       </div>
     </div>
   </section>
