--- a/src/pages/coaching.astro
+++ b/src/pages/coaching.astro
@@ -90,24 +90,26 @@ const videoTestimonials = [
             </Button>
           </div>
         </div>
-        <div class="order-2 flex justify-center lg:hidden" style="height: 40vh;">
+        <div class="order-2 flex justify-center lg:hidden">
           <img
             src="/images/people/helm-ceo-josh-klenoff-headhot-qjknnjcxfmg5scwrifh6biwf8tb74yddazgypmqpz4.webp"
             alt="Josh Klenoff - Helm CEO"
-            class="w-auto h-full object-contain object-bottom"
-            width="600"
-            height="800"
+            class="object-contain object-bottom"
+            style="width: 400px; height: 594px;"
+            width="400"
+            height="594"
             loading="eager"
           />
         </div>
       </div>
-      <div class="hidden lg:block absolute right-0 bottom-0" style="width: 55%; height: 100%;">
+      <div class="hidden lg:flex absolute right-0 bottom-0 items-end justify-end pr-8" style="height: 100%;">
         <img
           src="/images/people/helm-ceo-josh-klenoff-headhot-qjknnjcxfmg5scwrifh6biwf8tb74yddazgypmqpz4.webp"
           alt="Josh Klenoff - Helm CEO"
-          class="w-full h-full object-cover object-bottom"
-          width="600"
-          height="800"
+          class="object-contain object-bottom"
+          style="width: 576px; height: 571px;"
+          width="576"
+          height="571"
           loading="eager"
         />
       </div>
